--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -148,7 +148,7 @@
                        <!-- INTERVIW -->
                        <div id="pg-interview">
                        <div class="title-ill about-logo"><img src="images/logo-big.png" alt=""></div>
-                       <p>Tiny Atlas Quarterly was founded in 2012 by photographer Emily Nathan and designers Jake Huffman and Liz Mullally as a creative project. We chose to tell the story of travel from the perspectives of professional image makers whose voices normally would be absent from traditional travel publications. Today, Tiny Atlas, helmed by Emily Nathan and photo director Deb Hearey is known for rich, beautiful photography stories that unfold through a series of images.</p>
+                       <p>Tiny Atlas Quarterly was founded in 2012 by photographer Emily Nathan and designers Jake Huffman and Liz Mullally as a creative project. We chose to tell the story of travel from the perspective of professional image makers whose voices normally would be absent from traditional travel publications. Today, Tiny Atlas, helmed by Emily Nathan and photo director Deb Hearey is known for rich, beautiful photography stories that unfold through a series of images.</p>
                        <p>Our Instagram hashtag <a href="https://www.instagram.com/explore/tags/mytinyatlas/?hl=en" target="_blank">#mytinyatlas</a>, with well over 5 million posts, is a daily record of both Tiny Atlas’ editorial trips and projects, as well as an ever-present pulse on our community’s daily life.</p>
                        <p>Tiny Atlas is both a magazine attached to a production company and a creative agency connected to an authentic global community of travelers and photographers. In addition, we partner with select brands to produce the highest quality travel and lifestyle content with our expansive team of image makers. Increasingly, we create real-time activations and trips around the globe, engaging with our growing audience alongside our partners.</p>
                        <h3>Contact</h3>
@@ -174,7 +174,7 @@
 
                       <p><a href="stockists.html">Stockists</a></p>
 
-                       <p class="italics">Image by: Emily Nathan</p>
+                       <p class="italics">Image by: Andrew Kearns</p>
                        </div>
                   </div><!--END INTERVIEW -->
                </div> <!-- END BOX -->
