lummi island update

--- a/new-site/events/lummi-island/index.html
+++ b/new-site/events/lummi-island/index.html
@@ -89,13 +89,14 @@
             <p>Upon arrival in the afternoon, we will set out on a bike ride for beach combing through pebble shores and a late summer sunset. Back at the site, dinner will be prepared and enjoyed outdoors followed by yummy fireside treats.</p>
 
             <p><strong>Friday</strong></p>
-            <p>Get an early start to the day with a hike to the top of Baker Preserve. A few miles later, we'll be greeted by westerly views of the San Juan Islands and settle down for a brunch picnic. Prepare to switch gears as we embark on a seaplane ride over the Olympic Peninsula and stop in at Orcas Island. Save room for wood-fired pizzas and veggie dishes at Hogstone's, where a vast majority of ingredients are harvested straight from the island.</p>
+            <p>Get an early start to the day with a hike to the top of Baker Preserve. A few miles later, we’ll be greeted by westerly views of the San Juan Islands and settle down for a brunch picnic.</p><p>Relax for a few hours in the afternoon with some free time to draw, journal, go for a bike ride and explore. That evening, we’ll meet for dinner in the garden with fresh and delicious fare then end the evening with a beach bonfire and dessert.</p>
 
             <p><strong>Saturday</strong></p>
-            <p>Awake with a leisurely breakfast and warm morning sun. A new day brings us to explore Clark island, tour salmon reef net boats, and eat lunch on the beach. End the day by indulging on a crab feast on Jim's private beach back on Lummi.</p>
+            <p>Awake with a leisurely breakfast and warm morning sun. A new day brings us to explore neighboring Clark island, an uninhabited beautiful state park, where we will prepare lunch on the beach. We’ll also tour the salmon reef net boats on the way. We’ll end the day by indulging on a local crab feast on a private beach back on Lummi. </p>
 
             <p><strong>Sunday</strong></p>
-            <p>Spend a half day on a sea kayak tour, looking out for ocean wildlife along the way. Learn about the island's heritage from locals as you float from cove to cove. Relax for a few hours in the afternoon with some free time to draw, journal, and explore. That evening, we'll meet for dinner in the garden with fresh and delicious fare.</p>
+            <p>Spend a half day on a sea kayak tour, looking out for ocean wildlife and foraging for seaweed along the way. Stop at a secluded beach where lunch will be prepared for you before heading back, all the while learning about Lummi’s natural history.</p>
+            <p>To top off the whole weekend we will embark on a seaplane ride over the San Juan Islands where we will stop on Lopez Island for dinner. We will dine on creative agrarian northwest cuisine at Ursa Minor, where all the ingredients come from local island farmers, fisherman and foragers.</p>
 
             <p><strong>Monday</strong></p>
             <p>Conclude the weekend by gathering for one last meal before parting ways!</p>
