--- a/new-site/index.html
+++ b/new-site/index.html
@@ -124,7 +124,7 @@
 
               <div class="feature-card feature-large">
                   <a href="new-zealand/index.html">
-                      <img src="images/nz-feature.jpg" alt="" class="preview" />
+                      <img src="images/nz-feature2.jpg" alt="" class="preview" />
                       <div class="info">
                           <img src="new-zealand/images/nz-title.png" alt="" class="title" style="width:260px;"/>
                           <p class="text">A journey through vast expanses of super natural beauty, a place where fjords sit like monuments and white-tufted tui birds circle high overhead.</p>
