--- a/new-site/new-zealand/index.html
+++ b/new-site/new-zealand/index.html
@@ -418,6 +418,7 @@
                 <!--[if IE 9]><video style="display: none;"><![endif]-->
                 <source srcset="images/13_NewZealand_TAQ_Emily_Nathan__L.jpg" media="(min-width: 960px)">
                 <source srcset="images/13_NewZealand_TAQ_Emily_Nathan__M.jpg" media="(min-width: 768px)">
+                <source srcset="images/13_NewZealand_TAQ_Emily_Nathan_-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
                 <img srcset="images/13_NewZealand_TAQ_Emily_Nathan__S.jpg" alt="Tiny Atlas Quarterly, Emily Nathan, New Zealand">
             </picture>
@@ -454,6 +455,7 @@
                 <!--[if IE 9]><video style="display: none;"><![endif]-->
                 <source srcset="images/14_NewZealand_TAQ_Emily_Nathan__L.jpg" media="(min-width: 960px)">
                 <source srcset="images/14_NewZealand_TAQ_Emily_Nathan__M.jpg" media="(min-width: 768px)">
+                <source srcset="images/14_NewZealand_TAQ_Emily_Nathan_-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
                 <img srcset="images/14_NewZealand_TAQ_Emily_Nathan__S.jpg" alt="Tiny Atlas Quarterly, Emily Nathan, New Zealand">
             </picture>
@@ -839,6 +841,7 @@
                 <!--[if IE 9]><video style="display: none;"><![endif]-->
                 <source srcset="images/33_NewZealand_TAQ_Emily_Nathan__L.jpg" media="(min-width: 960px)">
                 <source srcset="images/33_NewZealand_TAQ_Emily_Nathan__M.jpg" media="(min-width: 768px)">
+                <source srcset="images/33_NewZealand_TAQ_Emily_Nathan_-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
                 <img srcset="images/33_NewZealand_TAQ_Emily_Nathan__S.jpg" alt="Tiny Atlas Quarterly, Emily Nathan, New Zealand">
             </picture>
@@ -1357,7 +1360,7 @@
                 }, {
                     duration: 1000
                 }, "easeInOutQuint"); // OUT
-                $("#page22").velocity({
+                $("#page42").velocity({
                     opacity: 1
                 }, {
                     display: "block"
