hotels ref links

--- a/new-site/new-zealand/index.html
+++ b/new-site/new-zealand/index.html
@@ -1114,13 +1114,13 @@
                         <h5><a href="https://sherwoodqueenstown.nz/">The Sherwood</a></h5>
                         <p>A 1960s motor lodge meets boutique eco-hotel, the Sherwood is set on an alpine hillside just a few minutes shy of Queenstown. Suites have touches like manuka honey soap, New Zealand soda drinks, local art lining the walls. The Sherwood hosts community events, yoga classes, and is home to a spa, sauna, and acclaimed restaurant.</p>
 
-                        <h5><a href="https://www.solitairelodge.co.nz/">Solitaire Lodge</a></h5>
-                        <p><a href="https://www.kiwicollection.com/hotel-detail/solitaire-lodge">Kiwi Collection’s</a> Solitaire Lodge is sheltered by forests of green, right outside of geothermal Rotorua. The suites at Solitaire take on a nautical-theme, many of them overlooking Lake Tarawera, home to black swans and a hot water beach. </p>
+                        <h5><a href="https://www.kiwicollection.com/hotel-detail/solitaire-lodge?utm_source=tiny%20atlas%20quarterly&utm_medium=magazine&utm_campaign=Tiny%20Atlas%20x%20NZ">Solitaire Lodge</a></h5>
+                        <p><a href=" https://www.kiwicollection.com/?utm_source=tiny%20atlas%20quarterly&utm_medium=magazine&utm_campaign=Tiny%20Atlas%20x%20NZ">Kiwi Collection’s</a> Solitaire Lodge is sheltered by forests of green, right outside of geothermal Rotorua. The suites at Solitaire take on a nautical-theme, many of them overlooking Lake Tarawera, home to black swans and a hot water beach. </p>
 
-                        <h5><a href="https://www.azur.co.nz/">Azur Lodge</a></h5>
-                        <p>Rise to views of the sun crossing over the mountains at Lake Wakatipu from the sundeck of your own private villa. Secluded and spacious, this <a href="https://www.kiwicollection.com/hotel-detail/azur-new-zealand">Kiwi Collection</a> lodge is minutes from Queenstown.</p>
+                        <h5><a href="https://www.kiwicollection.com/hotel-detail/azur-new-zealand?utm_source=tiny%20atlas%20quarterly&utm_medium=magazine&utm_campaign=Tiny%20Atlas%20x%20NZ">Azur Lodge</a></h5>
+                        <p>Rise to views of the sun crossing over the mountains at Lake Wakatipu from the sundeck of your own private villa. Secluded and spacious, this <a href="https://www.kiwicollection.com/?utm_source=tiny%20atlas%20quarterly&utm_medium=magazine&utm_campaign=Tiny%20Atlas%20x%20NZ">Kiwi Collection</a> lodge is minutes from Queenstown.</p>
 
-                        <h5><a href="https://www.hoteldebrett.com/">Hotel DeBrett</a></h5>
+                        <h5><a href="https://www.kiwicollection.com/hotel-detail/hotel-debrett?utm_source=tiny%20atlas%20quarterly&utm_medium=magazine&utm_campaign=tiny%20atlas%20quarterly%20x%20nz">Hotel DeBrett</a></h5>
                         <p>Small art deco-inspired hotel in central Auckland. With details like black and white tiled baths and colorful spiral staircases, eclectic and retro decor find their place in the individually-designed suites.</p>
                     </div>
                 </div>
