changed img link

--- a/new-site/events/patagonia/index.html
+++ b/new-site/events/patagonia/index.html
@@ -83,6 +83,7 @@
       </p>
     </div>
     <div class="main-content" style="max-width:520px">
+      <p><a href="#">LINK to trip booking page waiting on link</a></p>
       <p>Join the Tiny Atlas Community as we head to the Chilean Patagonia with Upscape for on an epic adventure exploring stunning terrain that changes continuously with ample opportunities for wildlife encounters, rushing water, and astrophotography.</p>
 
       <p>We will spend 9 days with you exploring and photographing. We will travel together from the pampas of Northern Patagonia, past towering peaks, to azure lakes. Enjoy meals of delicious local cuisine accompanied with some of Chile’s finest wines. We will stay in small lodges and glamp for three nights alongside the pristine Jeinimeni River.</p>
@@ -207,64 +208,64 @@
 
   <div id="gallery-grid" class="grid-wrapper">
     <div class="gram">
-      <a href="https://www.instagram.com/explore/tags/mytinyatlaslondon/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/01patagonia-trip.jpg" alt="Patagonia Photo">
+      <a href="https://www.instagram.com/tinyatlasquarterly/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/01patagonia-trip.jpg" alt="Patagonia Photo">
       </a>
     </div>
 
     <div class="gram">
-      <a href="https://www.instagram.com/explore/tags/mytinyatlaslondon/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/02patagonia-trip.jpg" alt="Patagonia Photo">
+      <a href="https://www.instagram.com/tinyatlasquarterly/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/02patagonia-trip.jpg" alt="Patagonia Photo">
       </a>
     </div>
 
     <div class="gram">
-      <a href="https://www.instagram.com/explore/tags/mytinyatlaslondon/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/03patagonia-trip.jpg" alt="Patagonia Photo">
-      </a>
-    </div>
-
-
-    <div class="gram">
-      <a href="https://www.instagram.com/explore/tags/mytinyatlaslondon/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/04patagonia-trip.jpg" alt="Patagonia Photo">
-      </a>
-    </div>
-
-    <div class="gram">
-      <a href="https://www.instagram.com/explore/tags/mytinyatlaslondon/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/05patagonia-trip.jpg" alt="Patagonia Photo">
-      </a>
-    </div>
-
-    <div class="gram">
-      <a href="https://www.instagram.com/explore/tags/mytinyatlaslondon/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/06patagonia-trip.jpg" alt="Patagonia Photo">
+      <a href="https://www.instagram.com/tinyatlasquarterly/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/03patagonia-trip.jpg" alt="Patagonia Photo">
       </a>
     </div>
 
 
     <div class="gram">
-      <a href="https://www.instagram.com/explore/tags/mytinyatlaslondon/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/07patagonia-trip.jpg" alt="Patagonia Photo">
+      <a href="https://www.instagram.com/tinyatlasquarterly/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/04patagonia-trip.jpg" alt="Patagonia Photo">
       </a>
     </div>
 
     <div class="gram">
-      <a href="https://www.instagram.com/explore/tags/mytinyatlaslondon/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/08patagonia-trip.jpg" alt="Patagonia Photo">
+      <a href="https://www.instagram.com/tinyatlasquarterly/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/05patagonia-trip.jpg" alt="Patagonia Photo">
       </a>
     </div>
 
     <div class="gram">
-      <a href="https://www.instagram.com/explore/tags/mytinyatlaslondon/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/09patagonia-trip.jpg" alt="Patagonia Photo">
+      <a href="https://www.instagram.com/tinyatlasquarterly/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/06patagonia-trip.jpg" alt="Patagonia Photo">
+      </a>
+    </div>
+
+
+    <div class="gram">
+      <a href="https://www.instagram.com/tinyatlasquarterly/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/07patagonia-trip.jpg" alt="Patagonia Photo">
       </a>
     </div>
 
     <div class="gram">
-      <a href="https://www.instagram.com/explore/tags/mytinyatlaslondon/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/10patagonia-trip.jpg" alt="Patagonia Photo">
+      <a href="https://www.instagram.com/tinyatlasquarterly/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/08patagonia-trip.jpg" alt="Patagonia Photo">
       </a>
     </div>
 
     <div class="gram">
-      <a href="https://www.instagram.com/explore/tags/mytinyatlaslondon/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/11patagonia-trip.jpg" alt="Patagonia Photo">
+      <a href="https://www.instagram.com/tinyatlasquarterly/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/09patagonia-trip.jpg" alt="Patagonia Photo">
       </a>
     </div>
 
     <div class="gram">
-      <a href="https://www.instagram.com/explore/tags/mytinyatlaslondon/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/12patagonia-trip.jpg" alt="Patagonia Photo">
+      <a href="https://www.instagram.com/tinyatlasquarterly/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/10patagonia-trip.jpg" alt="Patagonia Photo">
+      </a>
+    </div>
+
+    <div class="gram">
+      <a href="https://www.instagram.com/tinyatlasquarterly/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/11patagonia-trip.jpg" alt="Patagonia Photo">
+      </a>
+    </div>
+
+    <div class="gram">
+      <a href="https://www.instagram.com/tinyatlasquarterly/" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/12patagonia-trip.jpg" alt="Patagonia Photo">
       </a>
     </div>
   </div>
