--- a/new-site/events/patagonia/index.html
+++ b/new-site/events/patagonia/index.html
@@ -70,7 +70,7 @@
   </div>
 
   <div id="tahiti" class="img-head" style="height: 650px; background-image: url(images/00-Hero-Patagonia.jpg)">
-    <img src="images/UPSCAPE-OUTPOST-PATAGONIA-LOGO.png" alt="My Tiny Atlas London" class="logo" style="margin-top: 60px;    width: 800px;">
+    <img src="UPSCAPE_OUTPOST_UP_LOGO.png" alt="My Tiny Atlas London" class="logo" style="margin-top: 60px;    width: 800px;">
   </div>
 
   <div class="details-card with-logo">
