--- a/new-site/events/patagonia/index.html
+++ b/new-site/events/patagonia/index.html
@@ -70,20 +70,20 @@
   </div>
 
   <div id="tahiti" class="img-head" style="height: 650px; background-image: url(images/00-Hero-Patagonia.jpg)">
-    <img src="UPSCAPE_OUTPOST_UP_LOGO.png" alt="My Tiny Atlas London" class="logo" style="margin-top: 60px;    width: 800px;">
+    <img src="images/UPSCAPE_OUTPOST_UP_LOGO.png" alt="Outpost by Upscale" class="logo" style="margin-top: 60px;    width: 800px;">
   </div>
 
   <div class="details-card with-logo">
     <h3>Tiny Atlas x Outpost by Upscape Retreat &mdash; Patagonia <br/> In Association with Hasselblad</h3>
     <div class="sidebar">
       <p class="info" style="width:160px">
-        <span class="label">When</span><br> Feb 26 -<br /> Mar 06, 2019</p>
+        <span class="label">When</span><br> March 6-13th,<br/> 2019</p>
       <p class="info" style="width:160px">
         <span class="label">Where</span><br>Aysén Region, Chile
       </p>
     </div>
     <div class="main-content" style="max-width:520px">
-      <p><a href="#">LINK to trip booking page waiting on link</a></p>
+      <p><a href="https://upscapetravel.com/outpost/patagonia-jeinimeni/patagonia-photography/#form">Save your spot for this trip</a></p>
       <p>Join the Tiny Atlas Community as we head to the Chilean Patagonia with Upscape for on an epic adventure exploring stunning terrain that changes continuously with ample opportunities for wildlife encounters, rushing water, and astrophotography.</p>
 
       <p>We will spend 9 days with you exploring and photographing. We will travel together from the pampas of Northern Patagonia, past towering peaks, to azure lakes. Enjoy meals of delicious local cuisine accompanied with some of Chile’s finest wines. We will stay in small lodges and glamp for three nights alongside the pristine Jeinimeni River.</p>
@@ -180,15 +180,16 @@
         as jams, honey, granola and bread are a great way to start the day here.</p>
 
       <p><strong>Outpost Patagonia</strong></p>
-      <p>Set on the shores of the Jeinimeni River, a legendary sportfishing spot, just a few hours drive off of the Carretera Austral, Outpost Patagonia is a pop-up camp, complete with kitchen and living room dome tents, private guest tents with
-        living rooms and insulated sleeping pods and shared tent bathroom/showers. Located in the lesser-known region of Aysén, Outpost Patagonia offers access to a completely off-the-grid experience.</p>
+      <p>Within the Jeinimeni Reserve, which stretches from Argentina to the Patagonia Ice Fields in Chile, Outpost Patagonia is found along the shores of the brilliant turquoise river, Río Jeinimeni. This largely uninhabited area has four markedly different ecosystems, including: deciduous forests, evergreen forests, steppe, and high peaks, creating unique and dramatic scenery. Outpost Patagonia is a pop-up camp, complete with kitchen and living room dome tents, private guest tents with living rooms and insulated sleeping pods and shared tent bathroom/showers. The camp is positioned as a home base for travelers to explore, as well as access the entrance of Patagonia Park, the conservatory that made headlines earlier in 2018 when it was gifted by the Tompkin’s Conservation to the Chilean government.</p>
 
       <h4>Your Guides</h4>
+      <p><strong>Nico</strong></p>
+      <p>Our lead guide, Nico, is a man of many trades. He is not only the lead guide for Outpost, but chef, comedian and fly fisherman. Having spent his entire life passionate about the outdoors, he has explored Chile up and down, guided in several countries and received outdoor education in China. Besides the adventure of being outdoors, Nico finds joy when sharing remote regions with travelers who wouldn't otherwise come across them. Seeing his travelers leave Chile with fresh perspectives is ultimately what he looks forward to most. Nico is Chilean, lives in Chile's lakes region and fluent in both English and Spanish.</p>
+
       <p><strong>Dan Tom</strong></p>
       <p>San Francisco born and based Dan Tom is a graphic designer and travel photographer. Dan takes every opportunity to shoot for himself and for clients on photography projects that span the globe from Chile to India to Tahiti, Egypt and more.
         Dan loves to explore without expectations searching for the emotions and culture of a place along with incredible light and vistas. He is well known for his rich colors that highlight sunlit hillsides, glowing sunsets and vivid portraits.
-        Dan loves to shoot sunrise and sunset especially so plan for early morning and golden hour shoots to take advantage of learning and shooting alongside him. Dan’s love of photography grew with Instagram and he is an expert Dan in shooting and
-        editing on mobile as well as on camera. Dan has travelled for Tiny Atlas on projects to New Zealand, Tahiti and India and has spoken about his work with Tiny Atlas on Adobe Live, which you can find <a href="https://www.behance.net/live/videos/1225">here</a>.
+        Dan loves to shoot sunrise and sunset especially so plan for early morning and golden hour shoots to take advantage of learning and shooting alongside him. Dan’s love of photography grew with Instagram and he is an expert in shooting and editing on mobile as well as on camera. Dan has travelled for Tiny Atlas on projects to New Zealand, Tahiti and India and has spoken about his work with Tiny Atlas on Adobe Live, which you can find <a href="https://www.behance.net/live/videos/1225">here</a>.
         You can find more of Dan’s work on Instagram <a href="https://www.instagram.com/dantom/?hl=en">@dantom</a> where his audience of close to 300k keeps up to date on his projects.</p>
 
       <p><strong>Chiara Zonca</strong></p>
@@ -199,7 +200,7 @@
         film imagery at <a href="https://www.instagram.com/shadowonfilm/">@shadowonfilm</a> and on her <a href="https://chiarazonca.com/">website</a>.</p>
 
       <p>RSVP as soon as possible to guarantee your spot!</p>
-      <p><a href="#">LINK to trip booking page waiting on link</a></p>
+      <p><a href="https://upscapetravel.com/outpost/patagonia-jeinimeni/patagonia-photography/#form">Save your spot for this trip</a></p>
 
 
     </div>
