--- a/new-site/events/patagonia/index.html
+++ b/new-site/events/patagonia/index.html
@@ -86,9 +86,9 @@
       <p><a href="https://upscapetravel.com/outpost/patagonia-jeinimeni/patagonia-photography/#form">Save your spot for this trip</a></p>
       <p>Join the Tiny Atlas Community as we head to the Chilean Patagonia with Upscape for on an epic adventure exploring stunning terrain that changes continuously with ample opportunities for wildlife encounters, rushing water, and astrophotography.</p>
 
-      <p>We will spend 9 days with you exploring and photographing. We will travel together from the pampas of Northern Patagonia, past towering peaks, to azure lakes. Enjoy meals of delicious local cuisine accompanied with some of Chile’s finest wines. We will stay in small lodges and glamp for three nights alongside the pristine Jeinimeni River.</p>
+      <p>We will spend 8 days with you exploring and photographing. We will travel together from the pampas of Northern Patagonia, past towering peaks, to azure lakes. Enjoy meals of delicious local cuisine accompanied with some of Chile’s finest wines. We will stay in small lodges and glamp for three nights alongside the pristine Jeinimeni River.</p>
 
-      <p>Our 9 days will be spent traversing the untouched landscapes of Balmaceda, San Rafael, Parque Patagonia, Jeinimeni, and Outpost Patagonia. Tiny Atlas, our seasoned Upscape guides, and photographers Dan Tom <a href="https://www.instagram.com/dantom/?hl=en">@dantom</a> and Chiara Zonca
+      <p>Our 8 days will be spent traversing the untouched landscapes of Balmaceda, San Rafael, Parque Patagonia, Jeinimeni, and Outpost Patagonia. Tiny Atlas, our seasoned Upscape guides, and photographers Dan Tom <a href="https://www.instagram.com/dantom/?hl=en">@dantom</a> and Chiara Zonca
         <a href="https://www.instagram.com/shadowontherun/">@shadowontherun</a> will explore and shoot with you, providing photographic tips and inspiration along the way.  We will have a number of Hasselblad’s latest mirrorless digital medium format camera systems, the <a href="https://www.hasselblad.com/x1d">X1D</a>, along with us for you to test as well.</p>
 
       <h4>ITINERARY</h4>
@@ -139,7 +139,7 @@
         </ul>
       </p>
 
-      <p><strong>Day 6-7-8 : Outpost Patagonia Experience</strong></p>
+      <p><strong>Day 6-7 : Outpost Patagonia Experience</strong></p>
       <p>
         <ul>
           <li>Explore the four ecosystems of the Jeinimeni National Reserve</li>
@@ -153,7 +153,7 @@
         </ul>
       </p>
 
-      <p><strong>Day 9 : Return to Balmaceda</strong></p>
+      <p><strong>Day 8 : Return to Balmaceda</strong></p>
       <p>
         <ul>
           <li>Enjoy one last breakfast in our dining dome</li>
